--- a/catalog.html
+++ b/catalog.html
@@ -24,6 +24,46 @@
     </header>
 
     <main class="container">
+      <h1>Средства для ухода</h1>
+      <div class="shop-navigation">
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li>Средства для ухода</li>
+        </ul>
+      </div>
+
+      <div class="manufacturer">
+        <h2>Производители:</h2>
+        <!-- Здесь должна быть форма -->
+      </div>
+
+      <div class="goods-group">
+        <h2>Группы товаров:</h2>
+        <!-- Здесь должна быть форма -->
+      </div>
+
+      <section class="catalog">
+        <h2 class="visually-hidden">Каталог</h2>
+        <ul>
+          <li>
+            <img src="http://placehold.it/150x100">
+            <h3>Набор для путешествий "BAXTER OF CALIFORNIA"</h3>
+            <span class="price">2900 Р</span>
+            <!-- Кнопка купить -->
+          </li>
+        </ul>
+      </section>
+
+      <div class="catalog-navigation">
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+         </ul>
+      </div>
+
 
     </main>
 
